--- a/index.html
+++ b/index.html
@@ -159,7 +159,15 @@
     </div>
 
   </div>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Teks Berjalan</title>
+</head>
+<body>
+<marquee behavior="alternate">Selamat datang di website kami!</marquee>
+</body>
+</html>
   <!-- Footer -->
   <footer>
     © 2025 SDN 1 Alas Bayur. All rights reserved.
